# MaCH

./: .gitignore  CMakeLists.txt  README.md
driver/: hypergraph-preprocessing.cc  subhypergraph-matching.cc
example/: hyperedges-example.txt  node-labels-example.txt  query-example.txt
lib/Base/: Base.h  FileIO.h  Timer.h
lib/DataStructure/: HyperGraph.h
lib/SubhypergraphMatching/: CellSignature.h  DataHyperGraph.h  MaCH.h  MaCH_Large.h  PatternHyperGraph.h  Summit.h
